# espresso-logic-minimizer

./: Makefile.am  Makefile.in  config.h.in  configure  configure.in
src/: Makefile.am  Makefile.in  irred.c  unate.c
