dnl Process this file with autoconf to produce a configure script.

AC_INIT(config.h.in)
AM_INIT_AUTOMAKE(espresso-ab, 1.0)
AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(limits.h sys/time.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_UID_T

dnl Checks for library functions.
AC_FUNC_MEMCMP
AC_CHECK_FUNCS(strcspn strerror strspn strstr)

AC_OUTPUT([Makefile
	src/Makefile])
